appId: com.vladislavantonyuk.aicalendar
---
- launchApp
- assertVisible: "Logout"
- tapOn: "+"
- inputText: "and Description 'Discuss .NET 10'"
- tapOn: "OK"
- assertVisible: "Congratulations!"
- tapOn: "OK"
- tapOn:
    text: "Coffee.*"
- assertVisible: "Discuss .NET 10"
- tapOn: "Cancel Event"
- tapOn: "Logout"
- assertVisible: "Login"
- tapOn: "Login"
- tapOn: 
    point: 30%,30%
- tapOn: "Продовжити"
- assertVisible: "Logout"